--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,5 +26,10 @@ android {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+//    compile "com.android.support:appcompat-v7:$support_library_version"
 
+    compile('pub.devrel:easypermissions:2.0.0') {
+        exclude group: "com.android.support"
+    }
 }
