--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'androidx.appcompat:appcompat:1.0.0'
 //    compile "com.android.support:appcompat-v7:$support_library_version"
 
     compile('pub.devrel:easypermissions:2.0.0') {
