--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,11 +25,12 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 //    compile "com.android.support:appcompat-v7:$support_library_version"
 
-    compile('pub.devrel:easypermissions:2.0.0') {
-        exclude group: "com.android.support"
-    }
+//    compile('pub.devrel:easypermissions:2.0.0') {
+//        exclude group: "com.android.support"
+//    }
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
